Correct add image visibility, e listenrs

--- a/index.css
+++ b/index.css
@@ -11,13 +11,10 @@
     max-width: 600px;
     width: 100%;
     height: auto;
-}
-
-.content__imageContainer img:not(:nth-child(1)) {
+    position: absolute;
     opacity: 0;
     visibility: hidden;
-
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 1s linear;
 }
 
 .content__imageContainer img.visible {
